# AI-

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
app/: __init__.py  __main__.py  bootstrap.py  controller.py
core/: __init__.py  events.py  models.py
core/interfaces/: __init__.py  audio_source.py  transcriber.py  translator.py  vad.py
core/pipeline/: __init__.py  orchestrator.py  streaming_orchestrator.py  vad_utterance_processor.py
core/subtitle/: __init__.py  buffer.py  correction_engine.py  subtitle_manager.py
core/translation/: __init__.py  translation_coordinator.py
docs/: ARCHITECTURE.md  PHASE2.md  PHASE3.md
infrastructure/: __init__.py  config.py  logging.py  qt_async_bridge.py
resources/: default_config.toml
scripts/: benchmark_partial.py  benchmark_translate.py
services/: __init__.py
services/asr/: __init__.py  partial_merge.py  utterance_transcriber.py  whisper_service.py
services/audio/: __init__.py  ring_buffer.py  system_capture.py  utils.py
services/translation/: __init__.py  dashscope_mt_service.py  factory.py  translation_cache.py
services/vad/: energy_vad.py  factory.py  silero_vad.py
tests/: conftest.py
tests/core/: test_config.py  test_pipeline_orchestrator.py  test_ring_buffer.py  test_streaming_orchestrator.py  test_subtitle_buffer.py  test_subtitle_manager.py  test_subtitle_overlay_layout.py  test_subtitle_view_model.py  test_translation_coordinator.py  test_vad_utterance_processor.py
tests/services/: test_dashscope_mt_service.py  (+4 more)
ui/: main_window.py  subtitle_overlay.py
(+7 files in other folders)
