[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-translator"
version = "0.1.0"
description = "Local AI simultaneous interpretation assistant"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.6.0",
    "qasync>=0.27.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
ai-translator = "app.bootstrap:run"

[tool.setuptools.packages.find]
include = ["app*", "core*", "ui*", "infrastructure*", "services*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
